--- a/environment.yaml
+++ b/environment.yaml
@@ -25,4 +25,5 @@ dependencies:
     - wandb==0.17.9
     - boto3==1.35.94
     - transformers==4.47.1
+    - vector_quantize_pytorch==1.21.2
     - -e .
