--- a/environment.yaml
+++ b/environment.yaml
@@ -1,29 +1,8 @@
 name: MedVLM
 channels:
-  - defaults
-  - pytorch
-  - nvidia
+  - conda
 dependencies:
   - python=3.10
-  - pip=24.2
-  - pytorch=2.2.2
-  - torchvision=0.17.2
-  - torchaudio==2.2.2
-  - pytorch-cuda=12.1
+  - pip=25.0
   - pip:
-    - einops==0.8.0
-    - monai==1.3.2
-    - matplotlib==3.9.2
-    - numpy==1.26.4
-    - openpyxl==3.1.5
-    - pytorch-lightning==2.4.0
-    - pandas==2.2.2
-    - scikit-learn==1.5.1  
-    - seaborn==0.13.2
-    - tqdm==4.66.5
-    - torchio==0.19.9
-    - wandb==0.17.9
-    - boto3==1.35.94
-    - transformers==4.47.1
-    - vector_quantize_pytorch==1.21.2
-    - -e .
+      - -e .
