--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
     "einops==0.8.1",
     "monai==1.4.0",
     "matplotlib==3.10.1",
-    "numpy==2.2.4",
     "openpyxl==3.1.5",
     "pandas==2.2.3",
     "scikit-learn==1.6.1",
@@ -23,7 +22,8 @@ dependencies = [
     "boto3==1.37.23",
     "transformers==4.50.3",
     "vector_quantize_pytorch==1.22.4",
+    "x-transformers==2.2.11",
 ]
-
+dynamic = ["description", "readme", "authors"]
 [tool.setuptools.packages.find]
 where = ["."]
